--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,13 @@
 @import "general.css";
 @import "typography.css";
 @import "images.css";
+@import "buttons.css";
+@import "forms.css";
 
 @import "grid.css";
 @import "layout.css";
 
+@import "media.css";
 @import "card.css";
 
 @import "schemas.css"
